# test_autodock

./: CMakeLists.txt  package.xml  setup.py
action/: MPC.action
include/test_autodock/: mpc_planner.h  mpc_planner_ros.h  trajectory.h
launch/: move_to_pose.launch  mpc_controller.launch  tag_detection.launch
params/: move_to_pose.yaml  mpc_controller.yaml  tag_detection.yaml
scripts/: bezier_curve_plot.py  bezier_path.py
scripts/backup/: bezier_path.py
scripts/move_to_pose/: move_to_pose.py  move_to_pose_plot.py
src/: mpc_planner.cpp  mpc_planner_node.cpp  mpc_planner_ros.cpp  trajectory.cpp
src/backup/: mpc_planner_ros.cpp
